--- a/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
+++ b/src/app/modules/pages/messenger/components/friend-list/friend-list.component.html
@@ -1,14 +1,16 @@
 <div class="friend-list-container card">
     <div class="flex flex-col">
         <div class="m-3">
-            <h2>All Chats</h2>
+            <div class="heading-primary px-3">IMaTalk</div>
             <h1>Messages (29)</h1>
-            <mat-form-field class="mt-8">
-                <input matInput type="text" placeholder="Search">
-                <button matSuffix mat-icon-button>
-                    <mat-icon>search</mat-icon>
-                </button>
-            </mat-form-field>
+            <form >
+                <mat-form-field appearance="outline" class="mt-8">
+                    <input matInput type="text" placeholder="Search">
+                    <button matSuffix mat-icon-button>
+                        <mat-icon>search</mat-icon>
+                    </button>
+                </mat-form-field>
+            </form>
         </div>
 
         <div class="m-3">
