--- a/src/app/shared/styles/base/_base.scss
+++ b/src/app/shared/styles/base/_base.scss
@@ -8,17 +8,25 @@
 
 html { 
     height: 100%; 
-    font-size: 62.5%;
+    font-size: 10px;
+
+    @include respond(tab-land) {
+        font-size: 56.25%;
+    }
+    
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%;
+    }
+
 }
 
 body { 
     height: 100%;
     margin: 0 auto; 
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-    font-size: 1.4rem;
-    line-height: 2rem;
-    font-weight: 400;
-    color: $color-text;
     background-color: $color-background;
 }
