--- a/src/app/shared/styles/components/_button.scss
+++ b/src/app/shared/styles/components/_button.scss
@@ -1,41 +1,90 @@
 @import "../abstracts/variables.scss";
 
 .btn {
-    border-radius: 23px;
-    padding: 4px 30px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-wrap: nowrap;
+    &, &:link, &:visited {
+        border-radius: 4rem;
+        text-decoration: none;
+        padding: 1rem 4rem;
+        font-size: 1.5rem;
+        font-weight: 500;
+        cursor: pointer;
+        text-wrap: nowrap;
+        position: relative;
+        @include fullCenter
+    }
+
+    &:hover {
+        transform: translateY(-0.3rem);
+        box-shadow: $box-shadow;
+
+        &::after {
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
+
+    &--primary {
+        color: $color-white;
+        background: $color-primary 0% 0% no-repeat padding-box;
+        border: none;
+        letter-spacing: 0px;
+        
+        &:hover {
+            &::after {
+                background-color: $color-primary;
+            }
+        }
+    }
+
+    &--outline-primary {
+        color: $color-primary;
+        border: 2px solid $color-primary;
+        letter-spacing: 0px;
+        font-weight: 500;
+
+        &:hover {
+            &::after {
+                background-color: $color-primary;
+            }
+        }
+    }
+
+    &--google {
+        color: $color-white;
+
+        &:hover {
+            &::after {
+                background-color: rgb(239, 68, 68);
+            }
+        }
+    }
+
+    &--facebook {
+        color: $color-white;
+
+        &:hover {
+            &::after {
+                background-color: rgb(37, 99, 235);
+            }
+        }
+    }
+
+    &::after {
+        content: '';
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        border-radius: 10rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all .4s;
+    }
 }
 
-.btn-primary {
-    background: $color-primary 0% 0% no-repeat padding-box;
-    border: none;
-    letter-spacing: 0px;
-    color: #fff;
-    font-weight: 500;
-}
 
-.btn-primary:hover {
-    background-color: $color-hover-primary;
-    border: none;
-    font-weight: 500;
-}   
-
-.btn-outline-primary {
-    border: 2px solid $color-primary;
-    border-radius: 23px;
-    letter-spacing: 0px;
-    color: $color-primary;
-    font-weight: 500;
-}
 
 .btn-secondary {
     background-color: var(--color-secondary);
-}
-
-.btn-md {
-    padding: 10px 50px !important;
 }
