--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,19 @@ $Chat-theme: mat.define-light-theme((
 @import "./app/shared/styles/components/tooltip";
 @import "./app/shared/styles/components/stepper";
 
+html {
+  font-size: 62.5%;
 
+  @media only screen and (max-width: 56.25em) {
+    font-size: 50%;
+  }
+  @media only screen and (max-width: 75em) {
+    font-size: 56.25%;
+  }
+  @media only screen and (min-width: 112.5em) {
+    font-size: 75%;
+  }
+}
 
 .mat-icon {
   width: 24px;
