--- a/src/app/shared/styles/components/_loading.scss
+++ b/src/app/shared/styles/components/_loading.scss
@@ -14,3 +14,23 @@
     animation: l3 1s infinite linear;
     }
 @keyframes l3 {to{transform: rotate(1turn)}}
+
+.btn-loading {
+    width: 15px;
+    height: 15px;
+    border: 2px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
