--- a/src/app/modules/auth/components/fpassword/fpassword.component.html
+++ b/src/app/modules/auth/components/fpassword/fpassword.component.html
@@ -1,45 +1,191 @@
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
-  <div class="flex w-full max-w-4xl">
+  <div
+    class="flex w-full justify-center lg:px-20 rounded"
+    style="min-width: 25rem; max-width: 112rem; height: 60rem"
+  >
     <!-- Form Container -->
-    <div class="bg-white p-8 rounded shadow-md w-1/2">
-      <div class="w-1/6">
-        <img src="../../assets/san-marco.jpg" alt="Descriptive Alt Text" class="object-cover h-full w-full rounded-r">
-      </div>
-
-      <h1 class="text-2xl font-bold mb-4">Forgot Password</h1>
-
-      <div *ngIf="error" class="bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-4" role="alert">
-        <p>{{ error }}</p>
-      </div>
-
-      <h3 class="text-lg font-bold mb-4">Do not worry, we will send you reset instructions</h3>
-
-      <form *ngIf="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="mb-4">
-          <mat-form-field appearance="outline">
-            <input matInput formControlName="email" placeholder="Email" class="mt-1 p-2 w-full border rounded" trimWhiteSpace/>
-            <mat-error *ngIf="controlHasError('required', 'email')">
-              Please enter email
-            </mat-error>
-          </mat-form-field>
+    <div class="flex flex-col justify-between p-8 bg-white rounded shadow-md w-3/4 lg:w-1/2">
+      <div class="top">
+        <div class="w-1/6 mb-4">
+          <h1 class="heading-primary">IMaTalk</h1>
         </div>
 
-        <div class="bg-yellow-500 text-gray-700 p-4 flex items-center">
-          <mat-icon class="ficon mr-5">info</mat-icon>
-          <span>We can't seem to find the right email address for you, resend the email that you have registered!</span>
-        </div>
-        <button mat-button (click)="openNotifyDialog()" type="submit" class="w-full bg-blue-500 text-white p-2 rounded mt-4">Reset Password</button>
-      </form>
+        <!-- STEP 1: Email -->
+        <ng-container *ngIf="step == ForgotPasswordStep.Email">
+          <h1 class="text-3xl font-bold mb-8">
+            Find your account
+          </h1>
+          <p class="text-2xl font-bold mb-6 mt-[120px] text-center">
+            Please enter your email address to search for your account
+          </p>
+  
+          <form *ngIf="forgotPasswordForm" [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmitForgotPassword()">
+            <mat-form-field appearance="outline" class="w-full">
+              <input
+                matInput
+                formControlName="email"
+                placeholder="Email address"
+                class="w-full border rounded"
+                trimWhiteSpace
+              />
+              <mat-error *ngIf="controlHasError(forgotPasswordForm, 'required', 'email')">
+                Please enter email
+              </mat-error>
+            </mat-form-field>
+          </form>
+          <div class="flex justify-center">
+            <button mat-button class="btn btn--outline-primary mr-3" (click)="onClickCancel()">
+              Cancel
+            </button>
+            <button mat-button class="btn btn--primary" (click)="onSubmitForgotPassword()">
+              Search
+            </button>
+          </div>
+        </ng-container>
 
-      <div class="mt-4">
-        <a routerLink="/auth/register" class="text-blue-500">Don't have an account? Register now!</a>
+        <!-- STEP 2: OTP -->
+        <ng-container *ngIf="step == ForgotPasswordStep.OTP">
+            <h1 class="text-3xl font-bold mb-2">Verify Your Account</h1>
+            <p class="text-2xl font-bold mb-2 mt-[120px]" *ngIf="!resendOTP">
+              We’ve sent a One-Time Password (OTP) to {{ forgotPasswordForm.get("email")?.value }}.
+              Please enter the 6-digit code below to complete your
+              registration.
+            </p>
+  
+            <ng-container *ngIf="resendOTP">
+              <p class="text-2xl font-bold mb-2 mt-[80px]">
+                We’ve just sent you a new OTP. Please check your email for
+                the verification code, then enter the 6-digit code below to complete your
+                registration.
+              </p>
+              <div class="countdown-container text-center mt-6">
+                <h1 class="text-6xl">
+                  {{ countdown.minutes }}:{{ countdown.seconds < 10 ? "0" : ""
+                  }}{{ countdown.seconds }}
+                </h1>
+              </div>
+            </ng-container>
+  
+            <div class="flex items-center justify-center mb-6 mt-4 gap-2 w-full">
+              <input
+                type="text"
+                maxlength="1"
+                class="otp-input"
+                *ngFor="let digit of otpArray; let i = index"
+                [(ngModel)]="otp[i]"
+                (input)="onOtpInputChange($event, i)"
+                #otpInput
+              />
+            </div>
+  
+            <p class="text-center text-gray-500 mb-4"> Didn't receive the code?
+              <span 
+                [class.link-text]="!isCounting"
+                (click)="resendVerificationEmail()"
+              >
+                Resend OTP</span>
+            </p>
+  
+            <div class="flex justify-center w-full">
+              <button
+                type="submit"
+                class="btn btn--primary text-center"
+                (click)="verifyOtp()"
+              >
+                Verify
+                <div class="btn-loading ms-2" *ngIf="loading$ | async"></div>
+              </button>
+            </div>
+        </ng-container>
+
+        <!-- STEP 3: Reset Password  -->
+        <ng-container *ngIf="step == ForgotPasswordStep.ResetPass">
+          <h1 class="text-3xl font-bold mb-8">
+            Reset password
+          </h1>
+          <p class="text-2xl font-bold mb-6 mt-[40px]">
+            Please enter a new password to your account. We'll ask for this password whenever you log in
+          </p>
+          <form *ngIf="resetPasswordForm" [formGroup]="resetPasswordForm" (ngSubmit)="onSubmitResetPassword()">
+            <div class="mb-2">
+              <label class="block font-medium pl-2 mb-1">
+                New password
+              </label>
+              <mat-form-field appearance="outline" class="w-full">
+                <input
+                  matInput
+                  [type]="showPassword ? 'text' : 'password'"
+                  formControlName="newPassword"
+                  placeholder="New password"
+                  trimWhiteSpace
+                />
+                <mat-icon matSuffix (click)="toggleVisibilityPassword()" >{{ showPassword ? "visibility_off" : "visibility" }}</mat-icon>
+                <mat-error *ngIf="controlHasError(resetPasswordForm, 'required', 'newPassword')">
+                  Password is required
+                </mat-error>
+                <mat-error *ngIf="controlHasError(resetPasswordForm, 'password', 'newPassword')">
+                  Password must have at least 1 number, 1 capital letter
+                  and 1 special character.
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div class="mb-1">
+              <label class="block font-medium pl-2 mb-1">
+                Confirm password
+              </label>
+              <mat-form-field appearance="outline" class="w-full">
+                <input matInput [type]="showConfirmPassword ? 'text' : 'password'" formControlName="confirmPassword" placeholder="Confirm Password" trimWhiteSpace />
+                <mat-icon matSuffix (click)="toggleVisibilityConfirmPassword()" >{{ showConfirmPassword ? "visibility_off" : "visibility" }}</mat-icon>
+                <mat-error *ngIf="controlHasError(resetPasswordForm, 'required', 'confirmPassword')">
+                  Confirm password is required
+                </mat-error>
+                <mat-error *ngIf="controlHasError(resetPasswordForm, 'confirmPassword', 'confirmPassword')">
+                  Passwords do not match
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </form>
+          <div class="flex justify-center">
+            <button mat-button class="btn btn--outline-primary mr-3" (click)="onClickCancel()">
+              Cancel
+            </button>
+            <button mat-button type="submit" class="btn btn--primary" (click)="onSubmitResetPassword()">
+              Reset
+            </button>
+          </div>
+        </ng-container>
+
+        <!-- STEP 4: Completion  -->
+        <ng-container *ngIf="step == ForgotPasswordStep.Completion">
+          <h1 class="text-3xl font-bold mb-8">
+            Reset password complete!
+          </h1>
+          <p class="text-2xl font-bold mb-6 mt-[140px] text-center">
+            Your password has been successfully updated. You can now use your new password to log in to your account. 
+          </p>
+          <div class="flex justify-center">
+            <button mat-button class="btn btn--primary" (click)="onClickCancel()">
+              Return to login page
+            </button>
+          </div>
+        </ng-container>
       </div>
-
-      <h4 class="text-sm mt-4">hcd&#64;message.com</h4>
+      <div class="bottom">
+        <div class="flex justify-center mt-4"> Don't have an account?
+          <a routerLink="/auth/register" class="ml-2 link-text">
+            Register now!
+          </a>
+        </div>
+      </div>
     </div>
     <!-- Image Container -->
-    <div class="w-1/2">
-      <img src="../../assets/san-marco.jpg" alt="Descriptive Alt Text" class="object-cover h-full w-full rounded-r">
+    <div class="lg:block hidden w-1/2 shadow-md rounded">
+      <img
+        src="../../assets/login-img.jpg"
+        alt="Descriptive Alt Text"
+        class="object-cover h-full w-full rounded-r"
+      />
     </div>
   </div>
 </div>
