--- a/src/app/shared/styles/base/_typography.scss
+++ b/src/app/shared/styles/base/_typography.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .heading-primary {
-    font-size: 3rem;
+    font-size: 6rem;
     font-weight: 700;
     display: inline-block;
     background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
@@ -15,6 +15,10 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+}
+
+.text-primary {
+    color: $color-primary;
 }
 
 .long-text {
