--- a/src/app/shared/styles/base/_utilities.scss
+++ b/src/app/shared/styles/base/_utilities.scss
@@ -14,4 +14,11 @@
     border-radius: 12px;
     margin: 12px 6px;
 }
-  
+
+.otp-input {
+    border: 1px solid #ccc;
+    border-radius: 0.375rem;
+    width: 5rem;
+    height: 5rem;
+    text-align: center;
+  }
